# rust_gps_ntp

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: gps_parse.rs  ntp_poll.rs
docker/load/: Dockerfile  README.md  docker-compose.yml
docs/: hardware.md  interop.md  ntp-todo.md  review.md  rfp.md  rust-error-handling.md  setup.md  technical.md
scripts/: load_ntp.py  ntp_common.py  validate_ntp.py
src/: app.rs  battery.rs  board.rs  display.rs  gps.rs  i2c_bus.rs  lib.rs  logging.rs  main.rs  ntp.rs  pins.rs  pps.rs  rtc.rs  storage.rs  timezone.rs  ui_task.rs  wifi.rs
src/ntp/: mod.rs  protection.rs
