[package]
name = "rust_gps_ntp"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(target_os = "espidf")'.dependencies]
anyhow = "1"
chrono = "0.4"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
embedded-hal-02 = { package = "embedded-hal", version = "0.2" }
esp-idf-svc = { version = "0.51", features = ["std", "binstart"] }
log = "0.4"
nmea = "0.6"
st7789 = "0.7"

[build-dependencies]
embuild = "0.33"
